rudimentary isr with data caching

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,10 +6,12 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "start": "node ./dist/server/entry.mjs"
   },
   "dependencies": {
     "@astrojs/node": "^9.3.0",
+    "@repo/isr-cache": "*",
     "astro": "^5.12.0"
   }
 }
